@@ -218,12 +218,12 @@ const gchar *
 g_get_home_dir (void)
 {
 	if (home_dir == NULL){
-		uid_t uid;
-
 		pthread_mutex_lock (&home_lock);
 		if (home_dir == NULL){
+#ifdef HAVE_GETPWNENT_R
 			struct passwd pwbuf, *track;
 			char buf [4096];
+			uid_t uid;
 			
 			uid = getuid ();
 
@@ -236,6 +236,7 @@ g_get_home_dir (void)
 				}
 			}
 			endpwent ();
+#endif
 			if (home_dir == NULL)
 				home_dir = g_getenv ("HOME");
 			pthread_mutex_unlock (&home_lock);
