@@ -32,7 +32,6 @@ test_glib_SOURCES = $(SOURCES)
 
 test_eglib_CFLAGS = -Wall -Werror -D_FORTIFY_SOURCE=2 -I$(srcdir)/../src -DDRIVER_NAME=\"EGlib\"
 test_eglib_LDADD = ../src/libeglib.la -ldl
-test_eglib_LDFLAGS = -Wl,--export-dynamic
 
 test_glib_CFLAGS = `pkg-config --cflags glib-2.0` -DDRIVER_NAME=\"GLib\"
 test_glib_LDFLAGS = `pkg-config --libs glib-2.0 gmodule-2.0`
